@@ -103,6 +103,11 @@ public:
 		};
 		union Data {
 		public:
+			Data() = default;
+			Data(Data &&) = default;
+			Data(const Data&) = default;
+			Data& operator=(const Data&) = default;
+
 			Button		m_button {};
 			Group		m_group;
 		};
